--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipChildren="false"
-    tools:context=".SudokuTActivity">
+    tools:context=".SudokuTActivity"
+    android:background="#033535">
+
 
     <fragment
         android:id="@+id/main_fragment"
