--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -14,7 +14,8 @@
         android:layout_marginBottom="@dimen/menu_space"
         android:text="@string/long_app_name"
         android:textAppearance="?android:textAppearanceLarge"
-        android:textSize="@dimen/menu_text_size" />
+        android:textSize="@dimen/menu_text_size"
+        android:textColor="#FFFFFF"/>
 
     <Button
         android:id="@+id/continue_button"
@@ -22,7 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/menu_button_margin"
         android:padding="@dimen/menu_button_padding"
-        android:text="@string/continue_label" />
+        android:text="@string/continue_label"
+        android:background="@color/button_color"/>
 
     <Button
         android:id="@+id/new_button"
@@ -31,7 +33,8 @@
         android:layout_gravity="center"
         android:layout_margin="@dimen/menu_button_margin"
         android:padding="@dimen/menu_button_padding"
-        android:text="@string/new_game_label" />
+        android:text="@string/new_game_label"
+        android:background="@color/button_color"/>
 
     <Button
         android:id="@+id/about_button"
@@ -40,7 +43,8 @@
         android:layout_gravity="center"
         android:layout_margin="@dimen/menu_button_margin"
         android:padding="@dimen/menu_button_padding"
-        android:text="@string/about_label" />
+        android:text="@string/about_label"
+        android:background="@color/button_color"/>
 
     <Button
         android:id="@+id/exit_button"
@@ -49,5 +53,6 @@
         android:layout_gravity="center"
         android:layout_margin="@dimen/menu_button_margin"
         android:padding="@dimen/menu_button_padding"
-        android:text="@string/exit_label" />
+        android:text="@string/exit_label"
+        android:background="@color/button_color"/>
 </LinearLayout>
